@@ -245,6 +245,8 @@ Other changes:
 * A new <containsregexp> selector has been added, that selects files
   if their content matches a certain regular expression.
 
+* <antlr>'s debug attribute has been enabled.  Bugzilla Report 19051.
+
 Changes from Ant 1.5.2 to Ant 1.5.3
 ===================================
 
